Add debugging indicators on layer-view and quad_stack so we can see when their centers are not aligned.
BUG=225
R=nduca@chromium.org

Review URL: https://codereview.appspot.com/10394047

Former-commit-id: 6b012463e75bc43b4e1eaa5104fbf6c67367ba7b

--- a/src/cc/layer_viewer.css
+++ b/src/cc/layer_viewer.css
@@ -6,6 +6,9 @@
 layer-viewer {
   -webkit-flex-direction: column;
   display: -webkit-flex;
+  left: 0;
+  position: relative;
+  top: 0;
 }
 
 layer-viewer > top-controls {
@@ -32,4 +35,11 @@ layer-viewer > layer-viewer-analysis {
 
 .labeled-checkbox {
   white-space: nowrap;
+}
+
+.camera-debug-indicator {
+  left: 0;
+  position: absolute;
+  top:  0;
+  z-index: 11;
 }
