Fixes #248, replaces all calls to base.defineProperty() with getter/setter functions and base.setPropertyAndDispatchChange()
BUG=248
R=nduca@chromium.org

Review URL: https://codereview.appspot.com/10326044

Former-commit-id: 02666c0481b6e4c9b6a15ced7796df8edf5ea623

--- a/src/ui/overlay.css
+++ b/src/ui/overlay.css
@@ -23,8 +23,7 @@
   z-index: 1000;
 }
 
-.overlay-root:not([visible]),
-.overlay:not([visible]) {
+.overlay-root:not([visible]) {
   display: none;
 }
 
