Refactor layer-viewer to create new quad-stack-viewer.
New layer-viewer tells quad-stack-viewer what to show,
and quad-stack-viewer controls how to show it.

Warning messages generated during quad-stack-viewer work
are shown by layer-viewer in it's infobar.

Fixes #248, replaces all calls to base.defineProperty() with getter/setter functions and base.setPropertyAndDispatchChange()

BUG=250
R=nduca@chromium.org

Review URL: https://codereview.appspot.com/10326046

Former-commit-id: fa2421af2e1179165397296cb46a78b9941ecce1

--- a/src/cc/layer_viewer.css
+++ b/src/cc/layer_viewer.css
@@ -20,12 +20,15 @@ layer-viewer > top-controls {
   border-bottom: 1px solid #8e8e8e;
   border-top: 1px solid white;
   display: inline;
+  position: relative;
 }
 
-layer-viewer > quad-stack {
+layer-viewer > quad-stack-viewer {
   -webkit-flex: 1 1 auto;
+  -webkit-flex-direction: row;
+  display: -webkit-flex;
+  height: 100%;
   overflow: auto;
-  padding: 10px 10px 10px 10px;
 }
 
 layer-viewer > layer-viewer-analysis {
