Handle process names, labels, and finally process and thread sort indices
This allows us to show process names, tab names in about:tracing, finally,
and in a predictable manner.

R=dsinclair@chromium.org
BUG=9,179

Review URL: https://codereview.appspot.com/10685045

Former-commit-id: 350d96a707bbba15f43c92713db28cb727667784

--- a/src/tracing/timeline_track_view.css
+++ b/src/tracing/timeline_track_view.css
@@ -13,6 +13,10 @@
   display: -webkit-box;
 }
 
+.timeline-track-view heading {
+  width: 150px;
+}
+
 .model-track-container {
   -webkit-box-flex: 1;
   overflow: auto;
