--- a/src/tracing/tracks/canvas_based_track.css
+++ b/src/tracing/tracks/canvas_based_track.css
@@ -12,12 +12,13 @@
   padding: 0 5px 0 0;
 }
 
-.canvas-based-track-title {
-  background-color: #d6dde5;
+.canvas-based-track > heading {
+  display: block;
+  background-color: rgba(214, 221, 229, 0.3);
   border-right: 1px solid #8e8e8e;
   overflow: hidden;
-  padding-right: 5px;
   padding-left: 18px;
+  padding-right: 5px;
   text-align: left;
   text-overflow: ellipsis;
   white-space: nowrap;
