Set Autofill popup text color to dark gray.
BUG=449013
R=newt@chromium.org

Review URL: https://codereview.chromium.org/838453005

Cr-Commit-Position: refs/heads/master@{#311615}

Former-commit-id: 8cd9cd17b1b52ef751a5a101189394891d73f351

--- a/ui/android/java/res/layout/dropdown_item.xml
+++ b/ui/android/java/res/layout/dropdown_item.xml
@@ -28,6 +28,7 @@
             android:singleLine="true"
             android:textAlignment="viewStart"
             android:textSize="18sp"
+            android:textColor="#333"
             android:includeFontPadding="false"/>
         <TextView android:id="@+id/dropdown_sublabel"
             android:layout_width="wrap_content"
