Hide focus on the unselected effect when scrolling.
TEST=Tested manually on peppy.
BUG=chromium:611666

Change-Id: I1100772255b4764550994c95a16c81499d9b8ef9
Reviewed-on: https://chromium-review.googlesource.com/368551
Tested-by: Yuli Huang <yuli@chromium.org>
Reviewed-by: Tomasz Mikolajewski <mtomasz@chromium.org>

--- a/chrome/browser/resources/chromeos/camera/src/css/main.css
+++ b/chrome/browser/resources/chromeos/camera/src/css/main.css
@@ -363,6 +363,11 @@ body.mirror canvas {
   border: 2px solid rgb(66, 129, 244);
 }
 
+#effects li:not([selected]) {
+  /* Hide focus on the unselected effect during scrolling. (crbug.com/611666) */
+  outline: none;
+}
+
 #effects li div.preview-canvas-padder {
   -webkit-box-align: center;
   -webkit-box-pack: center;
