Hide video-controls for printing video.
BUG=chromium:822825
TEST=Tested manually on elm.

Change-Id: I88a4bcd9f235140fb2e4cb5d117d5be75dd1a281
Reviewed-on: https://chromium-review.googlesource.com/967641
Reviewed-by: Sheng-hao Tsao <shenghao@google.com>
Tested-by: yuli <yuli@chromium.org>

--- a/chrome/browser/resources/chromeos/camera/src/css/main.css
+++ b/chrome/browser/resources/chromeos/camera/src/css/main.css
@@ -869,6 +869,10 @@ body.album #album {
     width: auto;
   }
 
+  #browser video::-webkit-media-controls {
+    display: none;
+  }
+
   /* Reset styles to default on the album view. */
   #album div.media-wrapper,
   #album div.media-wrapper.selected {
