Revert "Android: Roll android_tools and fix lint errors"
This reverts commit 53ff4e28f03ea107043d5547262191d751af1cc5 [formerly a9531c4aae5caacda7c14858de3860efb41228b4].

Reason for revert:

Findit (https://goo.gl/kROfz5) identified CL at revision 606631 as the
culprit for failures in the build cycles as shown on:
https://findit-for-me.appspot.com/waterfall/culprit?key=ag9zfmZpbmRpdC1mb3ItbWVyRAsSDVdmU3VzcGVjdGVkQ0wiMWNocm9taXVtL2E5NTMxYzRhYWU1Y2FhY2RhN2MxNDg1OGRlMzg2MGVmYjQxMjI4YjQM

Sample Failed Build: https://ci.chromium.org/buildbot/chromium/android-rel/4213

Sample Failed Step: compile

Original change's description:
> Android: Roll android_tools and fix lint errors
> 
> Update lint to version 26.4.0-alpha03+.
> 
> This is the first lint update since 2017 September, thus a long list of
> TODOs is expected.
> 
> TBR for mechanical fixes to existing lint errors that are only exposed
> due to update.
> 
> TBR=mheikal@chromium.org
> 
> Bug: 900912
> Change-Id: I3335834ae308a3411ced51bb2c913b76a8f8d8c3
> Reviewed-on: https://chromium-review.googlesource.com/c/1327157
> Reviewed-by: Peter Wen <wnwen@chromium.org>
> Reviewed-by: Mohamed Heikal <mheikal@chromium.org>
> Commit-Queue: Peter Wen <wnwen@chromium.org>
> Cr-Commit-Position: refs/heads/master@{#606631}

Change-Id: Ie3a61a6d093d8cd6426ddcd7bf833f98c9b4f78c
No-Presubmit: true
No-Tree-Checks: true
No-Try: true
Bug: 900912
Reviewed-on: https://chromium-review.googlesource.com/c/1327611
Cr-Commit-Position: refs/heads/master@{#606646}
Former-commit-id: 755ab00005f764b004eddb9637caaa56c25a75b2

--- a/chrome/android/java/res/values/dimens.xml
+++ b/chrome/android/java/res/values/dimens.xml
@@ -3,7 +3,7 @@
      Use of this source code is governed by a BSD-style license that can be
      found in the LICENSE file. -->
 
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Connection info popup dimensions -->
     <dimen name="connection_info_padding_wide">24dp</dimen>
     <dimen name="connection_info_padding_thin">16dp</dimen>
@@ -231,12 +231,11 @@
     <!-- Find in Page dimensions -->
     <dimen name="find_result_bar_touch_width">68dp</dimen>
     <dimen name="find_result_bar_draw_width">46dp</dimen>
-    <!-- TODO(crbug.com/900912): Fix and remove lint ignore -->
-    <dimen tools:ignore="PxUsage" name="find_result_bar_result_min_height">8px</dimen>
-    <dimen tools:ignore="PxUsage" name="find_result_bar_active_min_height">16px</dimen>
-    <dimen tools:ignore="PxUsage" name="find_result_bar_vertical_padding">8px</dimen>
-    <dimen tools:ignore="PxUsage" name="find_result_bar_min_gap_between_stacks">3px</dimen>
-    <dimen tools:ignore="PxUsage" name="find_result_bar_stacked_result_height">3px</dimen>
+    <dimen name="find_result_bar_result_min_height">8px</dimen>
+    <dimen name="find_result_bar_active_min_height">16px</dimen>
+    <dimen name="find_result_bar_vertical_padding">8px</dimen>
+    <dimen name="find_result_bar_min_gap_between_stacks">3px</dimen>
+    <dimen name="find_result_bar_stacked_result_height">3px</dimen>
     <dimen name="find_in_page_separator_width">1dp</dimen>
     <dimen name="find_in_page_popup_width">375dp</dimen>
     <dimen name="find_in_page_popup_height">60dp</dimen>
@@ -316,8 +315,7 @@
     <dimen name="tile_view_width_condensed">64dp</dimen>
     <dimen name="tile_view_icon_size">48dp</dimen>
     <dimen name="tile_view_icon_size_modern">24dp</dimen>
-    <!-- TODO(crbug.com/900912): Fix and remove lint ignore -->
-    <dimen tools:ignore="PxUsage" name="tile_view_icon_min_size">24px</dimen>
+    <dimen name="tile_view_icon_min_size">24px</dimen>
     <dimen name="tile_view_icon_corner_radius">4dp</dimen>
     <dimen name="tile_view_icon_text_size">20dp</dimen>
     <dimen name="tile_view_monogram_size_modern">26dp</dimen>
@@ -411,8 +409,7 @@
     <dimen name="default_favicon_size">16dp</dimen>
     <dimen name="default_favicon_corner_radius">3dp</dimen>
     <dimen name="default_favicon_icon_text_size">10dp</dimen>
-    <!-- TODO(crbug.com/900912): Fix and remove lint ignore -->
-    <dimen tools:ignore="PxUsage" name="default_favicon_min_size">16px</dimen>
+    <dimen name="default_favicon_min_size">16px</dimen>
     <dimen name="circular_monogram_size">20dp</dimen>
     <dimen name="circular_monogram_text_size">14dp</dimen>
 
