--- a/chrome/android/java/res/drawable/download_home_tabs_bg.xml
+++ b/chrome/android/java/res/drawable/download_home_tabs_bg.xml
@@ -10,7 +10,8 @@
             <solid android:color="@color/modern_grey_200" />
         </shape>
     </item>
-    <item android:bottom="1dp">
+    <item xmlns:android="http://schemas.android.com/apk/res/android"
+        android:bottom="1dp">
         <shape android:shape="rectangle">
             <solid android:color="@android:color/white" />
         </shape>
