--- a/chrome/android/java/res_download/layout/download_manager_section_header.xml
+++ b/chrome/android/java/res_download/layout/download_manager_section_header.xml
@@ -11,6 +11,7 @@
     android:layout_height="wrap_content">
     <View
         android:id="@+id/divider"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         style="@style/HorizontalDivider" />
 
     <Space
