--- a/tools/android/customtabs_benchmark/res/layout/main.xml
+++ b/tools/android/customtabs_benchmark/res/layout/main.xml
@@ -30,7 +30,7 @@
         android:ems="10"
         android:id="@+id/url_text" />
 
-    <RadioGroup
+    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
