--- a/chrome/android/java/res/values/dimens.xml
+++ b/chrome/android/java/res/values/dimens.xml
@@ -599,5 +599,6 @@
     <dimen name="tab_list_mini_card_frame_size">1dp</dimen>
     <dimen name="tab_list_mini_card_text_size">12sp</dimen>
     <dimen name="tab_grid_thumbnail_card_default_size">152dp</dimen>
+    <dimen name="swipe_to_dismiss_threshold">72dp</dimen>
 
 </resources>
