Polish UI for Tab Grid
This is the CL for following UI polishment:

* Fade out title edge instead of ellipsizing it.
* Change the drawable for close tab in tab grid.
* Adjust padding in recyclerview.
* Adjust padding for incognito toggle indicator.
(TODO: Need a good way to adjust the width of indicator.)

Bug: 937537
Change-Id: Ic56d884a4fb83fa2390c628152cc8d5c94977689
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1538809
Commit-Queue: Yue Zhang <yuezhanggg@google.com>
Reviewed-by: Yusuf Ozuysal <yusufo@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#644121}(cherry picked from commit f48a3b036a192bb1a7c0c4651a28134f0de2c458 [formerly 6441aafe21fecc776904ac6c2ea9f498d3b95623])
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1546317
Reviewed-by: Wei-Yin Chen (陳威尹) <wychen@chromium.org>
Cr-Commit-Position: refs/branch-heads/3729@{#555}
Cr-Branched-From: 19260737901ea731c9baac505269e4ad9638530d [formerly d4a8972e30b604f090aeda5dfff68386ae656267]-refs/heads/master@{#638880}
Former-commit-id: 4f7d965786b710ceb1a235ec29eea493be221808

--- a/chrome/android/java/res/layout/tab_grid_card_item.xml
+++ b/chrome/android/java/res/layout/tab_grid_card_item.xml
@@ -27,8 +27,10 @@
                 android:layout_toEndOf="@id/tab_favicon"
                 android:layout_marginEnd="32dp"
                 android:minHeight="32dp"
-                android:ellipsize="end"
-                android:maxLines="1"
+                android:requiresFadingEdge="horizontal"
+                android:fadingEdgeLength="24dp"
+                android:ellipsize="none"
+                android:singleLine="true"
                 android:paddingBottom="6dp"
                 android:paddingTop="6dp"
                 android:textAppearance="@style/TextAppearance.BlackTitle2"/>
@@ -68,5 +70,5 @@
         android:scaleType="center"
         android:layout_gravity="end"
         android:contentDescription="@string/accessibility_tabstrip_btn_close_tab"
-        android:src="@drawable/btn_delete_24dp"/>
+        android:src="@drawable/btn_close"/>
 </FrameLayout>
