Update Lite Mode FRE to use secondary grey text color
Note: This is intentionally done to only the Lite Mode FRE layout, not
Data Saver.

Bug: 947229
Change-Id: Id1c1e5b0f8e41f796fa56d047fa4f8ac47393639
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1545171
Reviewed-by: Theresa <twellington@chromium.org>
Commit-Queue: Robert Ogden <robertogden@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#645581}(cherry picked from commit 1f29016578262c2a1490436e2fec342fa1dda931 [formerly cfb6a482648fee3ca8061c23fe8ca42f801e9cd2])
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1546882
Reviewed-by: Robert Ogden <robertogden@chromium.org>
Cr-Commit-Position: refs/branch-heads/3729@{#578}
Cr-Branched-From: 19260737901ea731c9baac505269e4ad9638530d [formerly d4a8972e30b604f090aeda5dfff68386ae656267]-refs/heads/master@{#638880}
Former-commit-id: 7e6860cc5206f6c191edfc536461734f1556122b

--- a/chrome/android/java/res/layout/fre_data_reduction_proxy_lite_mode.xml
+++ b/chrome/android/java/res/layout/fre_data_reduction_proxy_lite_mode.xml
@@ -63,7 +63,7 @@
                         android:gravity="start"
                         android:lineSpacingMultiplier="1.4"
                         android:text="@string/data_reduction_promo_summary_lite_mode"
-                        android:textAppearance="@style/TextAppearance.BlackBodyDefault" />
+                        android:textAppearance="@style/TextAppearance.BlackHint2" />
 
                     <android.support.v7.widget.SwitchCompat
                         android:id="@+id/enable_data_saver_switch"
