Update text styling of Lite mode tile in the overflow menu
Bug: 947208
Change-Id: Icf26cf2abb588cb4f39337679ff1a243cf9d4e8d
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1545177
Reviewed-by: Theresa <twellington@chromium.org>
Commit-Queue: Robert Ogden <robertogden@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#645583}
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1547931
Reviewed-by: Robert Ogden <robertogden@chromium.org>
Cr-Commit-Position: refs/branch-heads/3729@{#580}
Cr-Branched-From: 19260737901ea731c9baac505269e4ad9638530d [formerly d4a8972e30b604f090aeda5dfff68386ae656267]-refs/heads/master@{#638880}
Former-commit-id: b58e2fa40a7d26d79df9831bb96a5d93da4dc975

--- a/chrome/android/java/res/layout/data_reduction_main_menu_item.xml
+++ b/chrome/android/java/res/layout/data_reduction_main_menu_item.xml
@@ -44,13 +44,13 @@
                 android:id="@+id/menu_item_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.BlackTitle2" />
+                android:textAppearance="?android:attr/textAppearanceLargePopupMenu" />
 
             <TextView
                 android:id="@+id/menu_item_summary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.BlackBody" />
+                android:textAppearance="@style/TextAppearance.BlackHint2" />
         </LinearLayout>
 
     </FrameLayout>
