--- a/chrome/browser/resources/local_ntp/local_ntp.css
+++ b/chrome/browser/resources/local_ntp/local_ntp.css
@@ -153,7 +153,7 @@ body.remove-fakebox #fakebox-container {
   transition: background-color 300ms ease-in-out, opacity 200ms
 }
 
-html[darkmode=true] body:not(.alternate-fakebox) body:not(.light-chip) #fakebox {
+html[darkmode=true] body:not(.alternate-fakebox):not(.light-chip) #fakebox {
   background-color: rgb(var(--GG900-rgb));
 }
 
@@ -176,7 +176,7 @@ html[darkmode=true] .alternate-fakebox #fakebox {
   background-color: rgb(var(--GG200-rgb));
 }
 
-html[darkmode=true] body:not(.alternate-fakebox) body:not(.light-chip) #fakebox:hover {
+html[darkmode=true] body:not(.alternate-fakebox):not(.light-chip) #fakebox:hover {
   background-color: rgb(42, 43, 46);
 }
 
@@ -255,7 +255,7 @@ html[dir=rtl] #fakebox-search-icon {
   white-space: nowrap;
 }
 
-html[darkmode=true] body:not(.alternate-fakebox) body:not(.light-chip) #fakebox-text {
+html[darkmode=true] body:not(.alternate-fakebox):not(.light-chip) #fakebox-text {
   color: rgb(var(--GG200-rgb));
 }
 
@@ -298,7 +298,7 @@ html[dir=rtl] #fakebox-cursor {
   right: 20px;
 }
 
-html[darkmode=true] body:not(.alternate-fakebox) body:not(.light-chip) #fakebox-cursor {
+html[darkmode=true] body:not(.alternate-fakebox):not(.light-chip) #fakebox-cursor {
   background: rgb(var(--GB300-rgb));
 }
 
