Content indexing : UI polish
This CL fixes text size to match more with NTP feed articles.
1 - The text size of prefetch and content indexing cards to 16sp
2 - The line height is set to 24dp

(cherry picked from commit 0f0be06f79b5341377e3715653024a29a79de18e [formerly 37f724634439a2a01e73d98dde9fcad478deff66])

Bug: 1031798
Change-Id: I7ae77e48d230a0226ca3b0ed0d27acaa1cf313f4
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1956532
Reviewed-by: David Trainor <dtrainor@chromium.org>
Commit-Queue: Shakti Sahu <shaktisahu@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#723257}
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1965947
Reviewed-by: Shakti Sahu <shaktisahu@chromium.org>
Cr-Commit-Position: refs/branch-heads/3987@{#86}
Cr-Branched-From: f8ec429d946866f630bf422440e162a16c8b97d1 [formerly c4e8da9871cc266be74481e212f3a5252972509d]-refs/heads/master@{#722274}

Former-commit-id: 2fd7f7fb9701b975b85ae94860c179120d03db3e

--- a/chrome/android/java/res_download/layout/download_manager_prefetch_article.xml
+++ b/chrome/android/java/res_download/layout/download_manager_prefetch_article.xml
@@ -50,7 +50,7 @@
         app:layout_row="3"
         app:layout_columnSpan="4" />
 
-    <TextView
+    <org.chromium.ui.widget.TextViewWithLeading
         android:id="@+id/title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -58,12 +58,13 @@
         android:minHeight="40dp"
         android:maxLines="2"
         android:ellipsize="end"
-        android:textAppearance="@style/TextAppearance.BlackBodyDefault"
+        android:textAppearance="@style/TextAppearance.BlackTitle1"
         android:textAlignment="viewStart"
+        app:leading="@dimen/text_size_large_leading"
         app:layout_column="1"
         app:layout_row="0"
         app:layout_columnSpan="2"
-        app:layout_gravity="fill_horizontal" />
+        app:layout_gravity="fill_horizontal"/>
 
     <TextView
         android:id="@+id/caption"
@@ -106,11 +107,11 @@
         tools:ignore="ContentDescription" />
 
     <include layout="@layout/list_menu_button"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:paddingTop="12dp"
-            app:layout_column="3"
-            app:layout_row="0" />
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:paddingTop="12dp"
+        app:layout_column="3"
+        app:layout_row="0" />
 
     <!-- Wrap this in a FrameLayout so that if the thumbnail is hidden this view
          does not negatively affect layout.  The FrameLayout spans the whole
