--- a/chrome/android/java/res/layout/new_tab_page_offline_card.xml
+++ b/chrome/android/java/res/layout/new_tab_page_offline_card.xml
@@ -10,7 +10,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/hairline_border_card_background"
-    android:padding="@dimen/card_padding">
+    android:paddingTop="@dimen/card_padding"
+    android:paddingStart="@dimen/card_padding"
+    android:paddingEnd="@dimen/card_padding"
+    android:paddingBottom="10dp">
 
     <org.chromium.ui.widget.ChromeImageView
         android:id="@+id/icon"
