Content indexing : Remove play icon from media cards and add inline icons
This CL removes the large play icon above the thumbnail for prefetched cards,
as it might cause confuse users. Instead, the play icon is added inline
after the timestamp. For audio, a different music icon was added.

(cherry picked from commit 18ade47796763bf42a65a982a989ad50b8cf9583 [formerly 8825ceae7e9613486f586781d2cd3de801415b78])

Bug: 1033752
Change-Id: I3c6e5e67775e8a7ed3f8222faf7a8e5a07b16d9f
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1966292
Commit-Queue: Shakti Sahu <shaktisahu@chromium.org>
Reviewed-by: David Trainor <dtrainor@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#724904}
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1971178
Reviewed-by: Shakti Sahu <shaktisahu@chromium.org>
Cr-Commit-Position: refs/branch-heads/3987@{#194}
Cr-Branched-From: f8ec429d946866f630bf422440e162a16c8b97d1 [formerly c4e8da9871cc266be74481e212f3a5252972509d]-refs/heads/master@{#722274}

Former-commit-id: 2877cacb46084461064dc5156ef2e0b9e768ae45

--- a/chrome/android/java/res/values/colors.xml
+++ b/chrome/android/java/res/values/colors.xml
@@ -161,6 +161,9 @@
     <!-- Explore Sites colors -->
     <color name="explore_sites_dense_tile_background_color">#00000000</color>
 
+    <!-- Prefetch article colors -->
+    <color name="prefetch_offline_icon_tint_color">@color/modern_grey_500</color>
+
     <!-- Other colors -->
     <color name="media_viewer_bg">#000000</color>
     <color name="image_viewer_bg">#0E0E0E</color>
