--- a/chrome/android/java/res_download/layout/download_manager_audio.xml
+++ b/chrome/android/java/res_download/layout/download_manager_audio.xml
@@ -28,14 +28,6 @@
         style="@style/AsyncImageView"
         tools:ignore="ContentDescription" />
 
-    <org.chromium.ui.widget.ChromeImageButton
-        android:id="@+id/action_button"
-        android:elevation="2dp"
-        android:clickable="false"
-        android:layout_marginTop="35dp"
-        android:layout_marginStart="35dp"
-        style="@style/SmallMediaPlayButton"/>
-
     <include layout="@layout/list_menu_button"
         android:layout_width="48dp"
         android:layout_height="48dp"
@@ -69,6 +61,13 @@
         android:ellipsize="end"
         android:textAppearance="@style/TextAppearance.BlackCaption"
         android:textAlignment="viewStart" />
+
+    <org.chromium.ui.widget.ChromeImageView
+        android:id="@+id/media_button"
+        style="@style/InlineOfflineIconStyle"
+        android:layout_alignBottom="@id/timestamp"
+        android:layout_toEndOf="@id/timestamp"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/caption"
