--- a/chrome/android/java/res_download/layout/download_manager_card_footer.xml
+++ b/chrome/android/java/res_download/layout/download_manager_card_footer.xml
@@ -10,7 +10,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/group_card_item_border"
-    android:gravity="center"
+    android:gravity="center_vertical|start"
     android:clickable="true"
-    style="@style/ListPaginationHeaderText"
-    android:text="@string/download_manager_ui_list_pagination"/>
+    style="@style/CardPaginationHeaderText"
+    android:text="@string/download_manager_ui_card_pagination" />
