--- a/chrome/android/java/res_download/layout/download_manager_prefetch_article.xml
+++ b/chrome/android/java/res_download/layout/download_manager_prefetch_article.xml
@@ -94,12 +94,8 @@
         app:layout_gravity="center_vertical" />
 
     <ImageView
-        android:layout_width="12dp"
-        android:layout_height="12dp"
-        android:layout_marginStart="4dp"
-        android:scaleType="centerInside"
+        style="@style/InlineOfflineIconStyle"
         app:srcCompat="@drawable/ic_offline_pin_24dp"
-        android:tint="@color/default_icon_color"
         app:layout_column="2"
         app:layout_row="2"
         app:layout_columnSpan="2"
