--- a/chrome/android/java/res/layout/new_tab_page_offline_card.xml
+++ b/chrome/android/java/res/layout/new_tab_page_offline_card.xml
@@ -30,6 +30,8 @@
         android:layout_toEndOf="@id/icon"
         android:layout_marginStart="16dp"
         android:text="@string/explore_offline_card_title"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:textAppearance="@style/TextAppearance.BlackTitle1" />
 
     <TextView
@@ -40,6 +42,8 @@
         android:layout_alignStart="@id/title"
         android:layout_marginTop="6dp"
         android:text="@string/explore_offline_card_description"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:textAppearance="@style/TextAppearance.BlackHint2" />
 
     <org.chromium.chrome.browser.ui.widget.DualControlLayout
