Use a list of expectations to generate a minimal list of WPT variants (#106)
See tools/gen_wpt_cts_html for documentation.

--- a/templates/cts.html
+++ b/templates/cts.html
@@ -10,15 +10,8 @@
     NOTE:
     The WPT version of this file is generated with *one variant per test spec
     file*. If your harness needs more fine-grained suppressions, you'll need to
-    generate your own variants list from your suppression list. For example, if
-    test file cts:a/b: has 3 tests and you need to suppress a single case, you
-    might break it out into the following variants:
-
-      - cts:a/b:test1~
-      - cts:a/b:test2={"x":1}
-      - cts:a/b:test2={"x":2}  // <- suppress this one
-      - cts:a/b:test2={"x":3}
-      - cts:a/b:test3~
+    generate your own variants list from your suppression list.
+    See `tools/gen_wpt_cts_html` to do this.
 
     When run under browser CI, the original cts.html should be skipped, and
     this alternate version should be run instead, under a non-exported WPT test
